--- a/Cross-A-Road/Cross-A-Road.vcxproj
+++ b/Cross-A-Road/Cross-A-Road.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{335FEDF7-E673-49DF-929C-6B2C904999FE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CrossARoad</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -42,7 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -152,18 +152,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Cross-A-Road.cpp" />
+    <ClCompile Include="entity.cpp" />
     <ClCompile Include="game_level.cpp" />
     <ClCompile Include="game_map.cpp" />
-    <ClCompile Include="game_object.cpp" />
     <ClCompile Include="game_state.cpp" />
     <ClCompile Include="lane.cpp" />
     <ClCompile Include="main_system.cpp" />
     <ClCompile Include="player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="entity.h" />
     <ClInclude Include="game_level.h" />
     <ClInclude Include="game_map.h" />
-    <ClInclude Include="game_object.h" />
     <ClInclude Include="game_state.h" />
     <ClInclude Include="lane.h" />
     <ClInclude Include="main_system.h" />
