--- a/Cross-A-Road/Cross-A-Road.vcxproj
+++ b/Cross-A-Road/Cross-A-Road.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{335FEDF7-E673-49DF-929C-6B2C904999FE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CrossARoad</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -159,6 +159,7 @@
     <ClCompile Include="lane.cpp" />
     <ClCompile Include="main_system.cpp" />
     <ClCompile Include="player.cpp" />
+    <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="entity.h" />
@@ -168,6 +169,7 @@
     <ClInclude Include="lane.h" />
     <ClInclude Include="main_system.h" />
     <ClInclude Include="player.h" />
+    <ClInclude Include="window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
