--- a/Cross-A-Road/Cross-A-Road.vcxproj
+++ b/Cross-A-Road/Cross-A-Road.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{335FEDF7-E673-49DF-929C-6B2C904999FE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CrossARoad</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -158,7 +158,10 @@
     <ClCompile Include="game_state.cpp" />
     <ClCompile Include="lane.cpp" />
     <ClCompile Include="main_system.cpp" />
+    <ClCompile Include="obstacle.cpp" />
     <ClCompile Include="player.cpp" />
+    <ClCompile Include="point.cpp" />
+    <ClCompile Include="pixel.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -168,7 +171,10 @@
     <ClInclude Include="game_state.h" />
     <ClInclude Include="lane.h" />
     <ClInclude Include="main_system.h" />
+    <ClInclude Include="obstacle.h" />
+    <ClInclude Include="pixel.h" />
     <ClInclude Include="player.h" />
+    <ClInclude Include="point.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
