Split console functions to separate file

--- a/Cross-A-Road/Cross-A-Road.vcxproj.filters
+++ b/Cross-A-Road/Cross-A-Road.vcxproj.filters
@@ -54,7 +54,7 @@
     <ClCompile Include="pixel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="menu.cpp">
+    <ClCompile Include="console.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -95,7 +95,7 @@
     <ClInclude Include="pixel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="menu.h">
+    <ClInclude Include="console.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
