--- a/Cross-A-Road/Cross-A-Road.vcxproj
+++ b/Cross-A-Road/Cross-A-Road.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="console.cpp" />
     <ClCompile Include="Cross-A-Road.cpp" />
     <ClCompile Include="entity.cpp" />
     <ClCompile Include="game_level.cpp" />
@@ -166,6 +167,7 @@
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="console.h" />
     <ClInclude Include="entity.h" />
     <ClInclude Include="game_level.h" />
     <ClInclude Include="game_map.h" />
