Added Generate Obstacles

--- a/Cross-A-Road/Cross-A-Road.vcxproj
+++ b/Cross-A-Road/Cross-A-Road.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="player.cpp" />
     <ClCompile Include="point.cpp" />
     <ClCompile Include="pixel.cpp" />
+    <ClCompile Include="random.cpp" />
     <ClCompile Include="truck.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
@@ -188,6 +189,7 @@
     <ClInclude Include="pixel.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="point.h" />
+    <ClInclude Include="random.h" />
     <ClInclude Include="truck.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
