--- a/Cross-A-Road/Cross-A-Road.vcxproj.filters
+++ b/Cross-A-Road/Cross-A-Road.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="random.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="railway.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game_state.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="random.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="railway.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
