--- a/Cross-A-Road/Cross-A-Road.vcxproj
+++ b/Cross-A-Road/Cross-A-Road.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{335FEDF7-E673-49DF-929C-6B2C904999FE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CrossARoad</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -42,7 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -169,6 +169,7 @@
     <ClCompile Include="point.cpp" />
     <ClCompile Include="pixel.cpp" />
     <ClCompile Include="random.cpp" />
+    <ClCompile Include="railway.cpp" />
     <ClCompile Include="truck.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
@@ -189,6 +190,7 @@
     <ClInclude Include="pixel.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="point.h" />
+    <ClInclude Include="railway.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="truck.h" />
     <ClInclude Include="window.h" />
